fixed days table alignment problem

--- a/client/src/Components/AppComponents/Profile/ChallengeDetails/ChallengeDetails.css
+++ b/client/src/Components/AppComponents/Profile/ChallengeDetails/ChallengeDetails.css
@@ -26,6 +26,6 @@
 }
 .details-image{
   float:left;
-  width:30%;
+  width:100%;
   padding:105;
 }
